# mailtrace

./: .env.example  .gitignore  README.md  config.yaml.sample  justfile  pyproject.toml
dev/: README.md  docker-compose.yml
dev/seed/: Dockerfile  seed.py
dev/seed/data/: cross-cluster.ndjson  outbound-flow-obfuscated.ndjson
docs/plans/: 2026-01-24-mcp-server-design.md  2026-01-26-mx-discovery-design.md  2026-02-03-cluster-flow-check-design.md
mailtrace/: __init__.py  __main__.py  config.py  flow_check.py  graph.py  models.py  mx_discovery.py  parser.py  trace.py  utils.py
mailtrace/aggregator/: __init__.py  base.py  opensearch.py  ssh_host.py
mailtrace/mcp/: __init__.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_e2e.py  test_flow_check.py  test_graph.py  test_mx_discovery.py  test_opensearch.py  test_parser.py  test_trace.py  test_utils.py
tests/mcp/: test_flow_check_tool.py  test_input_validation.py  test_server.py  test_tools.py
