[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtrace"
version = "0.2.0"
description = ""
authors = [{ name = "SiriusKoan", email = "me@siriuskoan.one" }]
readme = "README.md"
dependencies = [
    "click>=8.2.1",
    "dnspython>=2.4.0",
    "graphviz>=0.21",
    "mcp>=1.6.0",
    "networkx>=3.5",
    "opensearch-py>=3.0.0",
    "paramiko>=3.5.1",
    "pydot>=4.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
mailtrace = "mailtrace.__main__:cli"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "mcp[cli]>=1.26.0",
    "pyright>=1.1.402",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.flake8]
exclude = ".venv"
ignore = ['E501', 'E704', 'W503']

[tool.isort]
profile = "black"
src_paths = ["mailtrace"]

[tool.pyright]
include = ["mailtrace"]
typeCheckingMode = "basic"
reportMissingImports = "error"

[tool.black]
line-length = 79
